last pushing site

--- a/okeadminıu/templates/pages/anasayfa.html
+++ b/okeadminıu/templates/pages/anasayfa.html
@@ -11,7 +11,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="{%static 'assets/img/profile-img.jpg'%}" alt="" class="img-fluid rounded-circle">
+        <img src="{%static 'assets/img/oguzkaanekinn.jpg'%}" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="{%url 'anasayfa'%}">Oğuz Kaan Ekin</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/mekroket" class="twitter"><i class="bx bxl-github"></i></a>
@@ -255,7 +255,7 @@
             <div class="resume-item">
               <h4>WEB TASARIM</h4>
               <h5>2020 - Present</h5>
-              <p><em><a href="www.bionluk.com">www.bionluk.com</a> </em></p>
+              <p><em><a href="https://www.bionluk.com">www.bionluk.com</a> </em></p>
               <ul>
                 <li>HTML,CSS,JS TO PSD</li>
                 <li><a href="https://www.urlaciftlik.com/">Urlaciftlik şuan erişebilinir durumda !</a></li>
