--- a/okeadminıu/templates/pages/details.html
+++ b/okeadminıu/templates/pages/details.html
@@ -70,9 +70,9 @@
           <div class="portfolio-info">
             <h3>Proje Bilgisi</h3>
             <ul>
-              <li><strong>Kategori</strong>: Web design & Backend & Frontend</li>
-              <li><strong>Proje Yapım Tarihi</strong>: 01 March, 2020</li>
-              <li><strong>Proje URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Kategori</strong>: {{projeler.kategori}}</li>
+              <li><strong>Yapım Tarihi</strong>: {{projeler.tarih}}</li>
+              <li><strong>Proje URL</strong>: <a href="{{projeler.url}}">{{projeler.url}}</a></li>
             </ul>
           </div>
 
